Theme: fix squished line height for long headings

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -187,7 +187,6 @@ h1, h2, h3, h4, h5, h6 {
 	color:#444;
 	background-color: none ;
 	padding: 0 0 0 0px;
-	line-height: 85%;
 	text-align: left;
 	text-transform: uppercase;
 	padding-bottom: 5px ;
